browser/themes/shared/urlbarView.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
import
url
(
"
chrome
:
/
/
browser
/
skin
/
urlbar
-
dynamic
-
results
.
css
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
:
root
{
-
-
autocomplete
-
popup
-
highlight
-
background
:
SelectedItem
;
-
-
autocomplete
-
popup
-
highlight
-
color
:
SelectedItemText
;
-
-
urlbarView
-
secondary
-
text
-
color
:
color
-
mix
(
in
srgb
currentColor
73
%
transparent
)
;
-
-
urlbarView
-
action
-
slide
-
in
-
distance
:
200px
;
-
-
urlbarView
-
row
-
gutter
:
2px
;
-
-
urlbarView
-
small
-
font
-
size
:
0
.
85em
;
-
-
urlbarView
-
item
-
inline
-
padding
:
var
(
-
-
urlbar
-
icon
-
padding
)
;
-
-
urlbarView
-
favicon
-
width
:
16px
;
-
-
urlbarView
-
icon
-
margin
-
start
:
0px
;
-
-
urlbarView
-
icon
-
margin
-
end
:
calc
(
var
(
-
-
urlbar
-
icon
-
padding
)
+
var
(
-
-
identity
-
box
-
margin
-
inline
)
)
;
-
-
urlbarView
-
rich
-
suggestion
-
default
-
icon
-
size
:
28px
;
-
-
urlbarView
-
result
-
button
-
size
:
24px
;
-
-
urlbarView
-
result
-
button
-
background
-
opacity
:
60
%
;
-
-
urlbarView
-
result
-
button
-
selected
-
color
:
var
(
-
-
toolbar
-
field
-
focus
-
color
)
;
-
-
urlbarView
-
result
-
button
-
selected
-
background
-
color
:
color
-
mix
(
in
srgb
var
(
-
-
toolbar
-
field
-
focus
-
background
-
color
)
var
(
-
-
urlbarView
-
result
-
button
-
background
-
opacity
)
transparent
)
;
-
-
urlbarView
-
result
-
button
-
hover
-
color
:
var
(
-
-
toolbar
-
field
-
focus
-
background
-
color
)
;
-
-
urlbarView
-
result
-
button
-
hover
-
background
-
color
:
color
-
mix
(
in
srgb
var
(
-
-
toolbar
-
field
-
focus
-
color
)
var
(
-
-
urlbarView
-
result
-
button
-
background
-
opacity
)
transparent
)
;
}
:
root
:
-
moz
-
lwtheme
{
-
-
urlbar
-
popup
-
action
-
color
:
rgb
(
91
91
102
)
;
-
-
urlbar
-
popup
-
url
-
color
:
rgb
(
0
97
224
)
;
/
*
Fallback
colours
for
when
theme
authors
don
'
t
define
lwtheme
variables
.
*
/
-
-
autocomplete
-
popup
-
highlight
-
background
:
rgb
(
0
99
255
)
;
-
-
autocomplete
-
popup
-
highlight
-
color
:
white
;
}
:
root
[
lwt
-
toolbar
-
field
-
focus
-
brighttext
]
{
-
-
urlbar
-
popup
-
url
-
color
:
var
(
-
-
lwt
-
brighttext
-
url
-
color
)
;
-
-
urlbar
-
popup
-
action
-
color
:
rgb
(
191
191
201
)
;
}
:
root
[
lwt
-
toolbar
-
field
-
brighttext
]
{
-
-
autocomplete
-
popup
-
highlight
-
background
:
rgb
(
0
99
225
)
;
}
media
(
prefers
-
contrast
)
{
:
root
{
-
-
urlbarView
-
result
-
button
-
background
-
opacity
:
100
%
;
-
-
urlbarView
-
secondary
-
text
-
color
:
currentColor
;
}
}
:
root
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
-
urlbarView
-
action
-
slide
-
in
-
distance
:
-
200px
;
}
/
*
Align
the
favicons
and
titles
of
rows
with
standard
16px
icons
with
those
of
rich
suggestions
.
*
/
#
urlbar
[
richSuggestionsEnabled
]
.
urlbarView
-
row
:
not
(
[
rich
-
suggestion
]
)
#
urlbar
[
richSuggestionsEnabled
]
.
urlbarView
-
row
[
rich
-
suggestion
]
[
icon
-
size
=
"
16
"
]
{
-
-
urlbarView
-
icon
-
margin
-
start
:
calc
(
(
var
(
-
-
urlbarView
-
rich
-
suggestion
-
default
-
icon
-
size
)
-
16px
)
/
2
)
;
-
-
urlbarView
-
icon
-
margin
-
end
:
calc
(
var
(
-
-
urlbar
-
icon
-
padding
)
+
var
(
-
-
identity
-
box
-
margin
-
inline
)
+
(
(
var
(
-
-
urlbarView
-
rich
-
suggestion
-
default
-
icon
-
size
)
-
16px
)
/
2
)
)
;
}
.
urlbarView
{
/
*
Don
'
t
handle
window
drag
events
in
case
we
are
overlapping
a
toolbar
*
/
-
moz
-
window
-
dragging
:
no
-
drag
;
display
:
block
;
text
-
shadow
:
none
;
overflow
:
clip
;
margin
-
inline
:
calc
(
5px
+
var
(
-
-
urlbar
-
container
-
padding
)
)
;
width
:
calc
(
100
%
-
2
*
(
5px
+
var
(
-
-
urlbar
-
container
-
padding
)
)
)
;
/
*
Match
urlbar
-
background
'
s
border
.
*
/
border
-
inline
:
1px
solid
transparent
;
}
.
urlbarView
-
body
-
inner
{
width
:
calc
(
100
%
+
2
*
var
(
-
-
urlbarView
-
row
-
gutter
)
)
;
margin
-
inline
:
calc
(
-
1
*
var
(
-
-
urlbarView
-
row
-
gutter
)
)
;
}
#
urlbar
[
open
]
>
.
urlbarView
>
.
urlbarView
-
body
-
outer
>
.
urlbarView
-
body
-
inner
{
border
-
top
:
1px
solid
var
(
-
-
autocomplete
-
popup
-
separator
-
color
)
;
}
.
urlbarView
-
results
{
padding
-
block
:
4px
;
white
-
space
:
nowrap
;
}
/
*
Vertically
center
the
one
-
offs
when
no
results
are
present
.
*
/
.
urlbarView
[
noresults
]
>
.
urlbarView
-
body
-
outer
>
.
urlbarView
-
body
-
inner
>
.
urlbarView
-
results
{
padding
-
block
:
0
;
}
.
urlbarView
-
row
{
display
:
flex
;
align
-
items
:
center
;
fill
:
currentColor
;
fill
-
opacity
:
var
(
-
-
urlbar
-
icon
-
fill
-
opacity
)
;
/
*
Use
a
transparent
border
rather
than
margin
such
that
the
view
'
s
entire
hover
area
is
contiguous
and
a
row
is
always
hovered
as
the
user
moves
the
mouse
across
rows
even
though
each
row
'
s
highlighted
area
is
smaller
.
*
/
border
:
var
(
-
-
urlbarView
-
row
-
gutter
)
solid
transparent
;
border
-
radius
:
calc
(
var
(
-
-
urlbarView
-
row
-
gutter
)
+
var
(
-
-
toolbarbutton
-
border
-
radius
)
)
;
background
-
clip
:
padding
-
box
;
}
.
urlbarView
-
row
[
row
-
selectable
]
:
not
(
[
selected
]
)
:
hover
{
background
-
color
:
var
(
-
-
autocomplete
-
popup
-
hover
-
background
)
;
}
.
urlbarView
-
row
[
selected
]
{
background
-
color
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
background
)
;
color
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
color
)
;
}
:
root
:
not
(
[
uidensity
=
compact
]
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
[
type
=
dynamic
]
)
{
min
-
height
:
32px
;
}
:
root
[
uidensity
=
touch
]
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
[
type
=
dynamic
]
)
{
padding
-
block
:
11px
;
}
.
urlbarView
-
row
-
inner
{
display
:
inline
-
flex
;
flex
:
1
1
;
flex
-
wrap
:
nowrap
;
overflow
:
hidden
;
padding
-
inline
:
var
(
-
-
urlbarView
-
item
-
inline
-
padding
)
;
padding
-
block
:
6px
;
}
/* ... */

