Bug 1847979 - Use CSS nesting for .urlbarView-body-inner, .urlbarView-results, .urlbarView-row, .urlbarView-row-inner, and .urlbarView-no-wrap rules. r=adw
Differential Revision: https://phabricator.services.mozilla.com/D187441

UltraBlame original commit: 64b9c8cb9525f62f880310f78f83146dbe5806f6

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -1027,7 +1027,6 @@ gutter
 )
 )
 ;
-}
 #
 urlbar
 [
@@ -1044,12 +1043,7 @@ body
 -
 outer
 >
-.
-urlbarView
--
-body
--
-inner
+&
 {
 border
 -
@@ -1071,6 +1065,7 @@ color
 )
 ;
 }
+}
 .
 urlbarView
 -
@@ -1088,7 +1083,6 @@ space
 :
 nowrap
 ;
-}
 /
 *
 Vertically
@@ -1125,10 +1119,7 @@ body
 -
 inner
 >
-.
-urlbarView
--
-results
+&
 {
 padding
 -
@@ -1136,6 +1127,7 @@ block
 :
 0
 ;
+}
 }
 .
 urlbarView
@@ -1272,11 +1264,7 @@ padding
 -
 box
 ;
-}
-.
-urlbarView
--
-row
+&
 [
 row
 -
@@ -1310,10 +1298,7 @@ background
 )
 ;
 }
-.
-urlbarView
--
-row
+&
 [
 selected
 ]
@@ -1362,10 +1347,7 @@ uidensity
 compact
 ]
 )
-.
-urlbarView
--
-row
+&
 :
 not
 (
@@ -1395,10 +1377,7 @@ uidensity
 =
 touch
 ]
-.
-urlbarView
--
-row
+&
 :
 not
 (
@@ -1421,12 +1400,19 @@ block
 11px
 ;
 }
+}
 .
 urlbarView
 -
 row
 -
 inner
+.
+urlbarView
+-
+no
+-
+wrap
 {
 display
 :
@@ -1435,15 +1421,35 @@ inline
 flex
 ;
 flex
-:
-1
-1
-;
-flex
 -
 wrap
 :
 nowrap
+;
+align
+-
+items
+:
+center
+;
+justify
+-
+content
+:
+start
+;
+}
+.
+urlbarView
+-
+row
+-
+inner
+{
+flex
+:
+1
+1
 ;
 overflow
 :
@@ -1472,7 +1478,6 @@ block
 :
 6px
 ;
-}
 :
 root
 :
@@ -1484,12 +1489,7 @@ uidensity
 compact
 ]
 )
-.
-urlbarView
--
-row
--
-inner
+&
 {
 min
 -
@@ -1516,37 +1516,6 @@ block
 *
 /
 }
-.
-urlbarView
--
-row
--
-inner
-.
-urlbarView
--
-no
--
-wrap
-{
-flex
--
-wrap
-:
-nowrap
-;
-align
--
-items
-:
-center
-;
-justify
--
-content
-:
-start
-;
 }
 .
 urlbarView
@@ -1555,12 +1524,6 @@ no
 -
 wrap
 {
-display
-:
-inline
--
-flex
-;
 max
 -
 width
@@ -1569,36 +1532,10 @@ width
 %
 ;
 flex
--
-grow
 :
 0
-;
-flex
--
-shrink
-:
 0
 ;
-}
-.
-urlbarView
--
-url
-{
-flex
--
-grow
-:
-1
-;
-flex
--
-shrink
-:
-1
-;
-}
 .
 urlbarView
 [
@@ -1621,12 +1558,7 @@ row
 -
 inner
 >
-.
-urlbarView
--
-no
--
-wrap
+&
 .
 urlbarView
 -
@@ -1653,12 +1585,7 @@ row
 -
 inner
 >
-.
-urlbarView
--
-no
--
-wrap
+&
 .
 urlbarView
 -
@@ -1697,12 +1624,7 @@ row
 -
 inner
 >
-.
-urlbarView
--
-no
--
-wrap
+&
 {
 /
 *
@@ -1734,12 +1656,6 @@ s
 visible
 *
 /
-flex
--
-shrink
-:
-0
-;
 max
 -
 width
@@ -1770,6 +1686,18 @@ width
 )
 )
 )
+;
+}
+}
+.
+urlbarView
+-
+url
+{
+flex
+:
+1
+1
 ;
 }
 /
